# testHSMAWS

./: CMakeLists.txt
src/LRS/: CMakeLists.txt  LRS.c  LRS_lib.c  LRS_lib.h
